--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <section class="container mx-auto flex justify-between mt-1">
+        <nav class="flex justify-center items-center space-x-4">
+            <a href="#" class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
+            <a href="#" class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
+            <a href="#" class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
+            <a href="#" class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
+        </nav>
+        <div class="profile">
+            <img class="h-16 w-16 rounded-full" src="./pro.jpg" alt="">
+        </div>
+    </section>
+    <header>
+        <section class="container mx-auto p-8 text-center">
+            <div class="logo">
+                <img class="mx-auto w-16 h-16" src="./1088.jpg" alt="">
+            </div>
+            <h1 class="text-6xl font-bold py-3">Welcome to <span class="text-red-600">Baper Bank!!!</span></h1>
+            <h4 class="font-semibold">This Bank Porvied You Unlimited Money. You cand <span class="text-orange-600">Diposit</span> & <span class="text-green-800">Widthdraw</span> as You want</h4>
+        </section>
+    </header>
 </body>
 </html>
