update all style and ready for added javascript

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <section class="container mx-auto flex justify-between mt-4">
-        <nav class="flex justify-center items-center space-x-4">
+    <section class="container mx-auto flex justify-between mt-2">
+        <nav class="flex font-bold justify-center items-center space-x-4">
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
         </nav>
         <div class="profile">
             <button id="dropdownDefault" data-dropdown-toggle="dropdown"
