--- a/bank.html
+++ b/bank.html
@@ -13,15 +13,15 @@
 
 <body>
     <section class="container mx-auto flex justify-between mt-2">
-        <nav class="flex justify-center items-center space-x-4">
+        <nav class="flex justify-center font-bold items-center space-x-4">
+            <a href="./index.html"
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
             <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
-            <a href="#"
-                class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
         </nav>
         <div class="profile">
             <button id="dropdownDefault" data-dropdown-toggle="dropdown"
@@ -71,15 +71,34 @@
             <div class="grid grid-cols-3 gap-4">
                 <div class="bg-blue-100 py-4 px-3 text-center rounded-lg">
                     <h3>Your Total <span class="text-red-400 font-bold">Diposit</span> Amount </h3>
-                    <h2 class="text-4xl font-bold mt-6">$<span>100</span></h2>
+                    <h2 class="text-4xl font-bold mt-6 text-red-600">$<span>100</span></h2>
                 </div>
                 <div class="bg-green-100 py-4 px-3 text-center rounded-lg">
-                    <h3>Your Total <span class="text-green-400 font-bold">Widthdraw</span> Amount </h3>
-                    <h2 class="text-4xl font-bold mt-6">$<span>200</span></h2>
+                    <h3>Your Total <span class="text-green-600 font-bold">Widthdraw</span> Amount </h3>
+                    <h2 class="text-4xl font-bold mt-6 text-green-600">$<span>200</span></h2>
                 </div>
-                <div class="bg-sky-100 py-4 px-3 text-center rounded-lg">
-                    <h3>Your Total <span class="text-sky-400 font-bold">Main</span> Amount </h3>
-                    <h2 class="text-4xl font-bold mt-6">$<span>1200</span></h2>
+                <div class="bg-sky-200 py-4 px-3 text-center rounded-lg">
+                    <h3>Your Total <span class="text-sky-600 font-bold">Main</span> Amount </h3>
+                    <h2 class="text-4xl font-bold mt-6 text-orange-600">$<span>1200</span></h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="mt-3 w-3/4 mx-auto">
+            <div class="grid grid-cols-2 gap-4">
+                <div class="dipost">
+                    <div class="text-center my-2 bg-slate-100 py-8 rounded">
+                        <h4 class="font-semibold">Please Diposit Amount</h4>
+                        <input class="block mx-auto my-3 w-1/2 rounded" type="text" name="" id="d-amount" placeholder="Diposit Amount..">
+                        <button class="bg-green-800 py-2 px-5 rounded font-semibold text-white hover:bg-green-900">Diposit</button>
+                    </div>
+                </div>
+                <div class="widthdraw">
+                    <div class="text-center my-2 bg-slate-100 py-8 rounded">
+                        <h4 class="font-semibold">Please Widthdraw Amount</h4>
+                        <input class="block mx-auto my-3 w-1/2 rounded" type="text" name="" id="w-amount" placeholder="Widthdraw Amount..">
+                        <button class="bg-orange-600 py-2 px-5 rounded font-semibold text-white hover:bg-red-600">Widthdraw</button>
+                    </div>
                 </div>
             </div>
         </section>
