--- a/bank.html
+++ b/bank.html
@@ -26,7 +26,7 @@
         <div class="profile">
             <button id="dropdownDefault" data-dropdown-toggle="dropdown"
                 class="text-white bg-blue-700 focus:ring-4  rounded-full  text-center inline-flex items-center"
-                type="button"><img class="h-16 w-16 rounded-full" src="./pro.jpg" alt=""></button>
+                type="button"><img class="h-16 w-16 rounded-full" src="./images/pro.jpg" alt=""></button>
             <!-- Dropdown menu -->
             <div id="dropdown" class="z-10 w-24 bg-white rounded-lg dark:bg-gray-800 block"
                 style="position: absolute; inset: 0px auto auto 0px; margin:0px;" data-popper-reference-hidden="true"
@@ -57,7 +57,7 @@
     <header>
         <section class="container mx-auto text-center">
             <div class="logo">
-                <img class="mx-auto w-16 h-16" src="./1088.jpg" alt="">
+                <img class="mx-auto w-16 h-16" src="./images/1088.jpg" alt="">
             </div>
             <h1 class="text-6xl font-bold py-3">Welcome to <span class="text-red-600">Baper Bank!!!</span></h1>
             <h4 class="font-semibold">This Bank Porvied You Unlimited Money. You cand <span
