--- a/bank.html
+++ b/bank.html
@@ -31,7 +31,11 @@
             <div id="dropdown" class="z-10 w-24 bg-white rounded-lg dark:bg-gray-800 block"
                 style="position: absolute; inset: 0px auto auto 0px; margin:0px;" data-popper-reference-hidden="true"
                 data-popper-escaped="" data-popper-placement="bottom">
-                <ul class="py-1 text-sm font-semibold text-white" aria-labelledby="dropdown">
+                <ul class="py-1 text-sm text-center font-semibold text-white" aria-labelledby="dropdown">
+                    <li>
+                        <a href="#"
+                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">Account</a>
+                    </li>
                     <li>
                         <a href="#"
                             class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">Dashboard</a>
@@ -42,12 +46,7 @@
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">Earnings</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">Sign
-                            out</a>
+                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">Signout</a>
                     </li>
                 </ul>
             </div>
