added user verify option on login

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="font-bold text-red-900">Please Login</p>
             <input class="block mx-auto my-3 w-1/2 rounded" type="email" name="" id="email" placeholder="Enter Your Email..">
             <input class="block mx-auto my-3 w-1/2 rounded" type="password" name="" id="password" placeholder="Enter Your Password..">
-            <button class="bg-red-800 py-2 px-5 rounded font-semibold text-white hover:bg-red-600">Log In</button>
+            <button class="bg-red-800 py-2 px-5 rounded font-semibold text-white hover:bg-red-600" id="logBtn" >Log In</button>
         </div>
 
 
