added balance validation

--- a/bank.html
+++ b/bank.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="bg-sky-200 py-4 px-3 text-center rounded-lg">
                     <h3>Your Total <span class="text-sky-600 font-bold">Main</span> Amount </h3>
-                    <h2 class="text-4xl font-bold mt-6 text-orange-600">$<span>1200</span></h2>
+                    <h2 class="text-4xl font-bold mt-6 text-orange-600">$<span id="mainBalance">1200</span></h2>
                 </div>
             </div>
         </section>
