--- a/bank.html
+++ b/bank.html
@@ -67,7 +67,7 @@
 
     <main class="container mx-auto">
         <section class="balance mt-8 w-3/4 mx-auto">
-            <div class="grid grid-cols-3 gap-4">
+            <div class="grid md:grid-cols-3 gap-4">
                 <div class="bg-blue-100 py-4 px-3 text-center rounded-lg">
                     <h3>Your Total <span class="text-red-400 font-bold">Diposit</span> Amount </h3>
                     <h2 class="text-4xl font-bold mt-6 text-red-600">$<span id="dAmount">100</span></h2>
@@ -84,7 +84,7 @@
         </section>
 
         <section class="mt-3 w-3/4 mx-auto">
-            <div class="grid grid-cols-2 gap-4">
+            <div class="grid md:grid-cols-2 gap-4">
                 <div class="dipost">
                     <div class="text-center my-2 bg-slate-100 py-8 rounded">
                         <h4 class="font-semibold">Please Diposit Amount</h4>
