update overall design and more functionality

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 
 <body>
     <section class="container mx-auto flex justify-between mt-2">
-        <nav class="flex font-bold justify-center items-center space-x-4">
+        <nav class="flex font-bold justify-center items-center space-x-1">
             <a href="#"
                 class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
             <a href="#"
-                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
-            <a href="#"
-                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
+                class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">About</a>
             <a href="#"
                 class="px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
         </nav>
