update style and verification

--- a/bank.html
+++ b/bank.html
@@ -26,7 +26,7 @@
                 class="text-white bg-blue-700 focus:ring-4  rounded-full  text-center inline-flex items-center"
                 type="button"><img class="h-16 w-16 rounded-full" src="./images/pro.jpg" alt=""></button>
             <!-- Dropdown menu -->
-            <div id="dropdown" class="z-10 w-24 bg-white rounded-lg dark:bg-gray-800 block"
+            <div id="dropdown" class="hidden z-10 w-24 bg-white rounded-lg dark:bg-gray-800 block"
                 style="position: absolute; inset: 0px auto auto 0px; margin:0px;" data-popper-reference-hidden="true"
                 data-popper-escaped="" data-popper-placement="bottom">
                 <ul class="py-1 text-sm text-center font-semibold text-white" aria-labelledby="dropdown">
